update membership logic
